--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "spotify-web-api-node": "^5.0.2",
+    "three": "^0.180.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/spotify-web-api-node": "^5.0.11",
+    "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
